package com.warehouseforgoods.warehouseforgoodsbackend.Model;

public enum Status {
    ACTIVE,BANNED
}
